--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "antd": "^5.16.0",
     "axios": "^1.6.8",
+    "primereact": "^10.6.2",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.4",
