--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "iconify": "^1.4.0"
+    "iconify": "^1.4.0",
+    "react-cookie": "^7.1.4",
+    "react-hot-toast": "^2.4.1"
   }
 }
